[package]
name = "esp_gpio_extender"
version = "0.1.0"
authors = ["playfulFence <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[target.riscv32imac-unknown-none-elf.dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git"}
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.8", optional = true }
esp-println = { version = "0.2.1", features = [ "esp32c3" ] }


[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32-hal = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32" ] }

[dependencies]
mcp230xx = "0.1.0"
embedded-hal = "0.2.7"
gpio-expander = "0.1.0"

[features]
# default = [ "rt" ]
# default = [ "rt", "esp32_ili9341"]
# default = [ "rt", "esp32s2_ili9341"]
default = [ "rt" , "eh1"]
# default = [ "rt", "esp32s3_usb_otg" ]
# rt = ["xtensa-lx-rt"] # for esp32 and esp32s2 chips
rt = ["riscv-rt"] # for esp32c3 chip
# eh1 = []
# eh1 = ["esp32-hal/eh1"]
# eh1 = ["esp32s2-hal/eh1"]
eh1 = ["esp32c3-hal/eh1"]

esp32 = []
esp32s2 = [ ]
esp32s3 = [  ]
esp32c3 = [  ]

