[package]
name = "esp_gpio_extender"
version = "0.1.0"
authors = ["playfulFence <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32-hal = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.12.0", features = ["esp32"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32" ] }

[target.xtensa-esp32s2-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32s2-hal = { package = "esp32s2-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s2"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32s2" ] }

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32s3-hal = { package = "esp32s3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
paste = "=1.0.8"
xtensa-lx-rt = { version = "0.12.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32s3" ] }

[target.riscv32imac-unknown-none-elf.dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.8", optional = true }
esp-println = { version = "0.2.1", features = [ "esp32c3" ] }

[dependencies]
mcp230xx = "0.1.0"
embedded-hal = "0.2.7"
gpio-expander = "0.1.0"

[features]
# default = ["esp32"]
# default = ["esp32s2"]
default = ["esp32s3" ]
# default = ["esp32c3"]

rt = ["xtensa-lx-rt"] # for esp32 and esp32s2 chips
# rt = ["riscv-rt"] # for esp32c3 chip

eh1 = [] # for esp32s3
# eh1 = ["esp32-hal/eh1"]
# eh1 = ["esp32s2-hal/eh1"]
# eh1 = ["esp32c3-hal/eh1"]

esp32 = ["eh1", "rt"]
esp32s2 = ["eh1", "rt"]
esp32s3 = ["rt"]
esp32c3 = ["eh1", "rt"]

